--- a/djmarketplace/app_shop/templates/app_shop/base.html
+++ b/djmarketplace/app_shop/templates/app_shop/base.html
@@ -18,7 +18,7 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                             <li><a class="dropdown-item" type="button" href="{% url 'profile' request.user.pk %}">Profile</a></li>
-                            <li><a class="dropdown-item" type="button" href="#">Cart</a></li>
+                            <li><a class="dropdown-item" type="button" href="{% url 'cart' %}">Cart</a></li>
                             <li><a class="dropdown-item" type="button" href="#">balance: {{request.user.profile.balance|floatformat:2}} rub.</a></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
