--- a/djmarketplace/app_shop/templates/app_shop/main.html
+++ b/djmarketplace/app_shop/templates/app_shop/main.html
@@ -12,10 +12,15 @@
                     <h6>{{i_good.shop.name}}</h6>
                     <p class="card-text">{{i_good.description|truncatewords:10}}</p>
                     <p>{{i_good.price}} RUB.</p>
-                    <form method="post" action="">
+                    <form method="post" action="{% url 'add_good' i_good.pk %}">
                         {% csrf_token %}
                         {{add_form.good_num}}
                         <button type="submit" class="btn btn-primary">Add to cart</button>
+                        {% if messages %}
+                            {% for message in messages %}
+                        <span style="color:red">{{message}}</span>
+                            {% endfor %}
+                        {% endif %}
                     </form>
                 </div>
             </div>
