--- a/djmarketplace/app_shop/templates/app_shop/profile.html
+++ b/djmarketplace/app_shop/templates/app_shop/profile.html
@@ -2,6 +2,14 @@
 <!--№5-->
 
 {% block main %}
+{% if messages %} <!--(08.02.)-->
+    {% for i_message in messages %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <strong>Недостаточно средств! Пополните баланс!</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+{% endif %}
     <h1>Profile</h1>
     {% if object.profile.status_flag == 'new' %}
         <span>Your current status is Trainee</span>
@@ -15,4 +23,34 @@
         {{form.as_p}}
         <button class="btn btn-primary" type="submit">Confirm</button>
     </form>
+<h2>Order history</h2>
+<div class="accordion" id="accordionExample">
+    {% for order in orders %}
+        <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        #{{order.id}} Order <br>{{order.date}}
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body d-flex flex-column">
+          {% for i_good in order.cart_good.all %}
+            <div>
+                <h4>{{i_good.good.name}}</h4>
+            </div>
+          <div>
+              <p>Num: {{i_good.good_num}}</p>
+          </div>
+          <div>
+              <h6>Price: {{i_good.good.price}} RUB.</h6>
+          </div>
+          {% endfor %}
+          <h5>Total cost: {{order.amount}} RUB.</h5>
+      </div>
+    </div>
+  </div>
+    {% endfor %}
+</div>
+
+
 {% endblock %}
